--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@acot/module-loader": "0.0.6",
     "@acot/reporter": "0.0.7",
+    "@acot/schema-validator": "^0.0.5",
+    "@octokit/core": "^3.4.0",
     "debug": "^4.3.1"
   },
   "devDependencies": {
