--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@acot/schema-validator": "^0.0.5",
     "@octokit/core": "^3.4.0",
     "debug": "^4.3.1",
-    "markdown-table-ts": "^1.0.3"
+    "markdown-table-ts": "^1.0.3",
+    "pretty-ms": "^7.0.1"
   },
   "devDependencies": {
     "@acot/tsconfig": "0.1.0",
